Прототип списка дел

--- a/src/l10n/ui/bundle.json
+++ b/src/l10n/ui/bundle.json
@@ -7,7 +7,63 @@
         "cldrFormat": "one{0}few{1}many{2}other{2}"
       }
     },
+    "NG_PLURALIZE::KAD_SEARCH_TOTAL": [
+      null,
+      "{'one': '{{count|number}} арбитражное дело', 'few': '{{count|number}} арбитражных дела', 'many': '{{count|number}} арбитражных дел', 'other': '{{count|number}} арбитражного дела'}"
+    ],
+    "Арбитражных дел не найдено": [
+      null,
+      ""
+    ],
+    "За все время": [
+      null,
+      ""
+    ],
+    "За последний год": [
+      null,
+      ""
+    ],
+    "За последний месяц": [
+      null,
+      ""
+    ],
+    "Искать по ИНН": [
+      null,
+      ""
+    ],
+    "Искать по ОГРН": [
+      null,
+      ""
+    ],
+    "Искать по наименованию": [
+      null,
+      ""
+    ],
+    "Картотека арбитражных дел": [
+      null,
+      ""
+    ],
+    "Нет арбитражных дел": [
+      null,
+      ""
+    ],
     "Наименование приложения\u0004Арбитражные дела — НКБ": [
+      null,
+      ""
+    ],
+    "Арбитражное дело\u0004Дело": [
+      null,
+      ""
+    ],
+    "Арбитражное дело\u0004Истец": [
+      null,
+      ""
+    ],
+    "Арбитражное дело\u0004Ответчик": [
+      null,
+      ""
+    ],
+    "Арбитражное дело\u0004Судья, текущая инстанция": [
       null,
       ""
     ]
@@ -20,9 +76,65 @@
         "cldrFormat": "one{0}other{1}"
       }
     },
+    "NG_PLURALIZE::KAD_SEARCH_TOTAL": [
+      null,
+      "{'one': '1 арбитражное дело', 'other': '{{count|number}} арбитражное дело'}"
+    ],
+    "Арбитражных дел не найдено": [
+      null,
+      "Arbitration Cases — NCB"
+    ],
+    "За все время": [
+      null,
+      ""
+    ],
+    "За последний год": [
+      null,
+      ""
+    ],
+    "За последний месяц": [
+      null,
+      ""
+    ],
+    "Искать по ИНН": [
+      null,
+      ""
+    ],
+    "Искать по ОГРН": [
+      null,
+      ""
+    ],
+    "Искать по наименованию": [
+      null,
+      ""
+    ],
+    "Картотека арбитражных дел": [
+      null,
+      ""
+    ],
+    "Нет арбитражных дел": [
+      null,
+      "Arbitration Cases — NCB"
+    ],
     "Наименование приложения\u0004Арбитражные дела — НКБ": [
       null,
       "Arbitration Cases — NCB"
+    ],
+    "Арбитражное дело\u0004Дело": [
+      null,
+      ""
+    ],
+    "Арбитражное дело\u0004Истец": [
+      null,
+      ""
+    ],
+    "Арбитражное дело\u0004Ответчик": [
+      null,
+      ""
+    ],
+    "Арбитражное дело\u0004Судья, текущая инстанция": [
+      null,
+      ""
     ]
   }
 }
