Стилизация списка дел

--- a/i18n/ui/en.po
+++ b/i18n/ui/en.po
@@ -77,6 +77,10 @@ msgid "Ответчик"
 msgstr ""
 
 #: ../src/autokad/views/autokad.html:1
+msgid "Подробнее..."
+msgstr ""
+
+#: ../src/autokad/views/autokad.html:1
 msgctxt "Арбитражное дело"
-msgid "Судья, текущая инстанция"
+msgid "Текущая инстанция"
 msgstr ""
