--- a/src/l10n/ui/bundle.json
+++ b/src/l10n/ui/bundle.json
@@ -47,6 +47,10 @@
       null,
       ""
     ],
+    "Подробнее...": [
+      null,
+      ""
+    ],
     "Наименование приложения\u0004Арбитражные дела — НКБ": [
       null,
       ""
@@ -63,7 +67,7 @@
       null,
       ""
     ],
-    "Арбитражное дело\u0004Судья, текущая инстанция": [
+    "Арбитражное дело\u0004Текущая инстанция": [
       null,
       ""
     ]
@@ -116,6 +120,10 @@
       null,
       "Arbitration Cases — NCB"
     ],
+    "Подробнее...": [
+      null,
+      ""
+    ],
     "Наименование приложения\u0004Арбитражные дела — НКБ": [
       null,
       "Arbitration Cases — NCB"
@@ -132,7 +140,7 @@
       null,
       ""
     ],
-    "Арбитражное дело\u0004Судья, текущая инстанция": [
+    "Арбитражное дело\u0004Текущая инстанция": [
       null,
       ""
     ]
