--- a/i18n/ui_keys/en.po
+++ b/i18n/ui_keys/en.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: feedback@null-pointer.ru\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: NULLPOINTER <feedback@null-pointer.ru>\n"
+"Last-Translator: ankostyuk <andrew.kostyuk@gmail.com>\n"
 "Language-Team: NULLPOINTER <feedback@null-pointer.ru>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -12,3 +12,24 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "CLDR_PLURAL_FORMS_FORMAT: one{0}other{1}\n"
+"X-Generator: Poedit 1.7.3\n"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+#, fuzzy
+msgid "autokad_search_source::company_inn"
+msgstr "по ИНН"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+#, fuzzy
+msgid "autokad_search_source::company_name"
+msgstr "по наименованию"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+#, fuzzy
+msgid "autokad_search_source::company_ogrn"
+msgstr "по ОГРН"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+#, fuzzy
+msgid "autokad_search_source::individual_name"
+msgstr "по ФИО"
