--- a/i18n/ui_keys/ru.po
+++ b/i18n/ui_keys/ru.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: feedback@null-pointer.ru\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: NULLPOINTER <feedback@null-pointer.ru>\n"
+"Last-Translator: ankostyuk <andrew.kostyuk@gmail.com>\n"
 "Language-Team: NULLPOINTER <feedback@null-pointer.ru>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -12,3 +12,20 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "CLDR_PLURAL_FORMS_FORMAT: one{0}few{1}many{2}other{2}\n"
+"X-Generator: Poedit 1.7.3\n"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+msgid "autokad_search_source::company_inn"
+msgstr "по ИНН"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+msgid "autokad_search_source::company_name"
+msgstr "по наименованию"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+msgid "autokad_search_source::company_ogrn"
+msgstr "по ОГРН"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+msgid "autokad_search_source::individual_name"
+msgstr "по ФИО"
