--- a/src/l10n/ui/bundle.json
+++ b/src/l10n/ui/bundle.json
@@ -15,39 +15,31 @@
       null,
       ""
     ],
-    "За все время": [
-      null,
-      ""
-    ],
-    "За последний год": [
-      null,
-      ""
-    ],
-    "За последний месяц": [
-      null,
-      ""
-    ],
-    "Искать по ИНН": [
-      null,
-      ""
-    ],
-    "Искать по ОГРН": [
-      null,
-      ""
-    ],
-    "Искать по наименованию": [
-      null,
-      ""
-    ],
     "Картотека арбитражных дел": [
       null,
       ""
     ],
-    "Нет арбитражных дел": [
+    "Ожидайте...": [
       null,
       ""
     ],
     "Подробнее...": [
+      null,
+      ""
+    ],
+    "Поиск арбитражных дел...": [
+      null,
+      ""
+    ],
+    "за все время": [
+      null,
+      ""
+    ],
+    "за год": [
+      null,
+      ""
+    ],
+    "за месяц": [
       null,
       ""
     ],
@@ -68,6 +60,18 @@
       ""
     ],
     "Арбитражное дело\u0004Текущая инстанция": [
+      null,
+      ""
+    ],
+    "Поиск в картотеке арбитражных дел временно недоступен\u0004Поиск в": [
+      null,
+      ""
+    ],
+    "Поиск в картотеке арбитражных дел временно недоступен\u0004временно недоступен": [
+      null,
+      ""
+    ],
+    "Поиск в картотеке арбитражных дел временно недоступен\u0004картотеке арбитражных дел": [
       null,
       ""
     ]
@@ -88,39 +92,31 @@
       null,
       "Arbitration Cases — NCB"
     ],
-    "За все время": [
-      null,
-      ""
-    ],
-    "За последний год": [
-      null,
-      ""
-    ],
-    "За последний месяц": [
-      null,
-      ""
-    ],
-    "Искать по ИНН": [
-      null,
-      ""
-    ],
-    "Искать по ОГРН": [
-      null,
-      ""
-    ],
-    "Искать по наименованию": [
-      null,
-      ""
-    ],
     "Картотека арбитражных дел": [
       null,
       ""
     ],
-    "Нет арбитражных дел": [
+    "Ожидайте...": [
+      null,
+      ""
+    ],
+    "Подробнее...": [
+      null,
+      ""
+    ],
+    "Поиск арбитражных дел...": [
       null,
       "Arbitration Cases — NCB"
     ],
-    "Подробнее...": [
+    "за все время": [
+      null,
+      ""
+    ],
+    "за год": [
+      null,
+      ""
+    ],
+    "за месяц": [
       null,
       ""
     ],
@@ -143,6 +139,18 @@
     "Арбитражное дело\u0004Текущая инстанция": [
       null,
       ""
+    ],
+    "Поиск в картотеке арбитражных дел временно недоступен\u0004Поиск в": [
+      null,
+      ""
+    ],
+    "Поиск в картотеке арбитражных дел временно недоступен\u0004временно недоступен": [
+      null,
+      ""
+    ],
+    "Поиск в картотеке арбитражных дел временно недоступен\u0004картотеке арбитражных дел": [
+      null,
+      "Arbitration Cases — NCB"
     ]
   }
 }
