--- a/src/l10n/ui/bundle.json
+++ b/src/l10n/ui/bundle.json
@@ -9,7 +9,7 @@
     },
     "NG_PLURALIZE::KAD_SEARCH_TOTAL": [
       null,
-      "{'one': '{{count|number}} арбитражное дело', 'few': '{{count|number}} арбитражных дела', 'many': '{{count|number}} арбитражных дел', 'other': '{{count|number}} арбитражного дела'}"
+      "{'one': '{} арбитражное дело', 'few': '{} арбитражных дела', 'many': '{} арбитражных дел', 'other': '{} арбитражного дела'}"
     ],
     "Арбитражных дел не найдено": [
       null,
@@ -86,7 +86,7 @@
     },
     "NG_PLURALIZE::KAD_SEARCH_TOTAL": [
       null,
-      "{'one': '1 арбитражное дело', 'other': '{{count|number}} арбитражное дело'}"
+      "{'one': '1 арбитражное дело', 'other': '{} арбитражное дело'}"
     ],
     "Арбитражных дел не найдено": [
       null,
