--- a/src/l10n/ui/bundle.json
+++ b/src/l10n/ui/bundle.json
@@ -74,6 +74,22 @@
     "Поиск в картотеке арбитражных дел временно недоступен\u0004картотеке арбитражных дел": [
       null,
       ""
+    ],
+    "Тип арбитражного дела\u0004административные": [
+      null,
+      ""
+    ],
+    "Тип арбитражного дела\u0004банкротные": [
+      null,
+      ""
+    ],
+    "Тип арбитражного дела\u0004гражданские": [
+      null,
+      ""
+    ],
+    "Тип арбитражного дела\u0004любой тип дела": [
+      null,
+      ""
     ]
   },
   "en": {
@@ -149,6 +165,22 @@
       ""
     ],
     "Поиск в картотеке арбитражных дел временно недоступен\u0004картотеке арбитражных дел": [
+      null,
+      ""
+    ],
+    "Тип арбитражного дела\u0004административные": [
+      null,
+      ""
+    ],
+    "Тип арбитражного дела\u0004банкротные": [
+      null,
+      ""
+    ],
+    "Тип арбитражного дела\u0004гражданские": [
+      null,
+      ""
+    ],
+    "Тип арбитражного дела\u0004любой тип дела": [
       null,
       ""
     ]
