Resolve #13: Поддержка поиска по полному наименованию компании

--- a/i18n/ui_keys/src/keys.txt
+++ b/i18n/ui_keys/src/keys.txt
@@ -1,5 +1,6 @@
 # Источники поиска
 autokad_search_source::company_name
+autokad_search_source::company_full_name
 autokad_search_source::company_ogrn
 autokad_search_source::company_inn
 autokad_search_source::individual_name
