--- a/i18n/ui_keys/en.po
+++ b/i18n/ui_keys/en.po
@@ -12,7 +12,12 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "CLDR_PLURAL_FORMS_FORMAT: one{0}other{1}\n"
-"X-Generator: Poedit 1.7.3\n"
+"X-Generator: Poedit 1.7.4\n"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+#, fuzzy
+msgid "autokad_search_source::company_full_name"
+msgstr "по полному наименованию"
 
 #: ../i18n/ui_keys/src/keys.txt:1
 #, fuzzy
