--- a/i18n/ui_keys/ru.po
+++ b/i18n/ui_keys/ru.po
@@ -12,7 +12,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "CLDR_PLURAL_FORMS_FORMAT: one{0}few{1}many{2}other{2}\n"
-"X-Generator: Poedit 1.7.3\n"
+"X-Generator: Poedit 1.7.4\n"
+
+#: ../i18n/ui_keys/src/keys.txt:1
+msgid "autokad_search_source::company_full_name"
+msgstr "по полному наименованию"
 
 #: ../i18n/ui_keys/src/keys.txt:1
 msgid "autokad_search_source::company_inn"
